--- a/markdown_generator/publications.ipynb
+++ b/markdown_generator/publications.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -41,9 +41,11 @@
      "output_type": "stream",
      "text": [
       "pub_date\ttitle\tvenue\texcerpt\tcitation\turl_slug\tpaper_url\tslides_url\n",
-      "2009-10-01\tPaper Title Number 1\tJournal 1\tThis paper is about the number 1. The number 2 is left for future work.\tYour Name, You. (2009). \"Paper Title Number 1.\" <i>Journal 1</i>. 1(1).\tpaper-title-number-1\thttp://academicpages.github.io/files/paper1.pdf\thttp://academicpages.github.io/files/slides1.pdf\n",
-      "2010-10-01\tPaper Title Number 2\tJournal 1\tThis paper is about the number 2. The number 3 is left for future work.\tYour Name, You. (2010). \"Paper Title Number 2.\" <i>Journal 1</i>. 1(2).\tpaper-title-number-2\thttp://academicpages.github.io/files/paper2.pdf\thttp://academicpages.github.io/files/slides2.pdf\n",
-      "2015-10-01\tPaper Title Number 3\tJournal 1\tThis paper is about the number 3. The number 4 is left for future work.\tYour Name, You. (2015). \"Paper Title Number 3.\" <i>Journal 1</i>. 1(3).\tpaper-title-number-3\thttp://academicpages.github.io/files/paper3.pdf\thttp://academicpages.github.io/files/slides3.pdf"
+      "2025-09-30\tToward Quantum-Enabled Biomarker Discovery: An Outlook from Q4Bio\tarXiv (quant-ph)\tOutlook on hybrid quantum–classical pipelines for biomarker discovery; defines empirical quantum advantage and sketches a co-designed path to near-term feasibility.\tShah, D., Teo, M., Robinett, R. A., Madejski, S., Morrell, Z., Ramesh, S., Campbell, C., Thotakura, B., Omole, V., Hall, B., Harrow, A. W., Tomesh, T., Pearson, A. T., Chong, F. T., & Riesenfeld, S. J. (2025). \"Toward Quantum-Enabled Biomarker Discovery: An Outlook from Q4Bio.\" <i>arXiv</i>, arXiv:2509.25904.\tq4bio-quantum-enabled-biomarker-discovery-outlook\thttps://arxiv.org/pdf/2509.25904\t\n",
+      "2025-08-18\tNoisy Quantum Simulation Using Tracking, Uncomputation and Sampling\tarXiv (quant-ph)\tIntroduces TUSQ, a simulator that reduces overhead for noisy circuit emulation via tracking, uncomputation, and tree-based sampling.\tDangwal, S., Oberoi, T., Sailopal, A., Shah, D., & Chong, F. T. (2025). \"Noisy Quantum Simulation Using Tracking, Uncomputation and Sampling.\" <i>arXiv</i>, arXiv:2508.04880.\ttusq-noisy-quantum-simulation-tracking-uncomputation-sampling\thttps://arxiv.org/pdf/2508.04880.pdf\t\n",
+      "2024-09-20\tCircuit decompositions and scheduling for neutral atom devices with limited local addressability\tIEEE International Conference on Quantum Computing and Engineering (QCE 2024)\tCompiler pipeline and scheduling that minimize global-rotation costs for neutral atom hardware, improving circuit duration and fidelity.\tNottingham, N., Perlin, M. A., Shah, D., White, R., Bernien, H., Chong, F. T., & Baker, J. M. (2024). \"Circuit decompositions and scheduling for neutral atom devices with limited local addressability.\" <i>IEEE International Conference on Quantum Computing and Engineering (QCE)</i>.\tneutral-atom-compiler-decompositions-scheduling-qce2024\thttps://arxiv.org/pdf/2307.14996.pdf\t\n",
+      "2024-02-20\tYFlows: Systematic Dataflow Exploration and Code Generation for Efficient Neural Network Inference using SIMD Architectures on CPUs\tProceedings of the 33rd ACM SIGPLAN International Conference on Compiler Construction (CC 2024)\tExplores dataflow choices and code generation to accelerate CPU inference, achieving strong speedups across NN workloads.\tZhou, C., Hassman, Z., Shah, D., Richard, V., & Li, Y. (2024). \"YFlows: Systematic Dataflow Exploration and Code Generation for Efficient Neural Network Inference using SIMD Architectures on CPUs.\" <i>CC 2024</i>, pp. 212–226.\tyflows-simd-dataflow-cpu-inference-cc2024\thttps://arxiv.org/pdf/2310.00574.pdf\t\n",
+      "2023-08-18\tApplicability of Clay/Organic Clay to Environmental Pollutants: Green Way—An Overview\tApplied Sciences\tOverview of clay and organoclay materials for air, water, and soil pollution control with a green-chemistry perspective.\tQi, J., Yu, J., Shah, K. J., Shah, D. D., & You, Z. (2023). \"Applicability of Clay/Organic Clay to Environmental Pollutants: Green Way—An Overview.\" <i>Applied Sciences</i>, 13(16):9395.\tapplicability-of-clay-organic-clay-to-environmental-pollutants-green-way-an-overview\thttps://www.mdpi.com/2076-3417/13/16/9395/pdf\t"
      ]
     }
    ],
@@ -62,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -86,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -127,69 +129,108 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2009-10-01</td>\n",
-       "      <td>Paper Title Number 1</td>\n",
-       "      <td>Journal 1</td>\n",
-       "      <td>This paper is about the number 1. The number 2...</td>\n",
-       "      <td>Your Name, You. (2009). \"Paper Title Number 1....</td>\n",
-       "      <td>paper-title-number-1</td>\n",
-       "      <td>http://academicpages.github.io/files/paper1.pdf</td>\n",
-       "      <td>http://academicpages.github.io/files/slides1.pdf</td>\n",
+       "      <td>2025-09-30</td>\n",
+       "      <td>Toward Quantum-Enabled Biomarker Discovery: An...</td>\n",
+       "      <td>arXiv (quant-ph)</td>\n",
+       "      <td>Outlook on hybrid quantum–classical pipelines ...</td>\n",
+       "      <td>Shah, D., Teo, M., Robinett, R. A., Madejski, ...</td>\n",
+       "      <td>q4bio-quantum-enabled-biomarker-discovery-outlook</td>\n",
+       "      <td>https://arxiv.org/pdf/2509.25904</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2010-10-01</td>\n",
-       "      <td>Paper Title Number 2</td>\n",
-       "      <td>Journal 1</td>\n",
-       "      <td>This paper is about the number 2. The number 3...</td>\n",
-       "      <td>Your Name, You. (2010). \"Paper Title Number 2....</td>\n",
-       "      <td>paper-title-number-2</td>\n",
-       "      <td>http://academicpages.github.io/files/paper2.pdf</td>\n",
-       "      <td>http://academicpages.github.io/files/slides2.pdf</td>\n",
+       "      <td>2025-08-18</td>\n",
+       "      <td>Noisy Quantum Simulation Using Tracking, Uncom...</td>\n",
+       "      <td>arXiv (quant-ph)</td>\n",
+       "      <td>Introduces TUSQ, a simulator that reduces over...</td>\n",
+       "      <td>Dangwal, S., Oberoi, T., Sailopal, A., Shah, D...</td>\n",
+       "      <td>tusq-noisy-quantum-simulation-tracking-uncompu...</td>\n",
+       "      <td>https://arxiv.org/pdf/2508.04880.pdf</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2015-10-01</td>\n",
-       "      <td>Paper Title Number 3</td>\n",
-       "      <td>Journal 1</td>\n",
-       "      <td>This paper is about the number 3. The number 4...</td>\n",
-       "      <td>Your Name, You. (2015). \"Paper Title Number 3....</td>\n",
-       "      <td>paper-title-number-3</td>\n",
-       "      <td>http://academicpages.github.io/files/paper3.pdf</td>\n",
-       "      <td>http://academicpages.github.io/files/slides3.pdf</td>\n",
+       "      <td>2024-09-20</td>\n",
+       "      <td>Circuit decompositions and scheduling for neut...</td>\n",
+       "      <td>IEEE International Conference on Quantum Compu...</td>\n",
+       "      <td>Compiler pipeline and scheduling that minimize...</td>\n",
+       "      <td>Nottingham, N., Perlin, M. A., Shah, D., White...</td>\n",
+       "      <td>neutral-atom-compiler-decompositions-schedulin...</td>\n",
+       "      <td>https://arxiv.org/pdf/2307.14996.pdf</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2024-02-20</td>\n",
+       "      <td>YFlows: Systematic Dataflow Exploration and Co...</td>\n",
+       "      <td>Proceedings of the 33rd ACM SIGPLAN Internatio...</td>\n",
+       "      <td>Explores dataflow choices and code generation ...</td>\n",
+       "      <td>Zhou, C., Hassman, Z., Shah, D., Richard, V., ...</td>\n",
+       "      <td>yflows-simd-dataflow-cpu-inference-cc2024</td>\n",
+       "      <td>https://arxiv.org/pdf/2310.00574.pdf</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023-08-18</td>\n",
+       "      <td>Applicability of Clay/Organic Clay to Environm...</td>\n",
+       "      <td>Applied Sciences</td>\n",
+       "      <td>Overview of clay and organoclay materials for ...</td>\n",
+       "      <td>Qi, J., Yu, J., Shah, K. J., Shah, D. D., &amp; Yo...</td>\n",
+       "      <td>applicability-of-clay-organic-clay-to-environm...</td>\n",
+       "      <td>https://www.mdpi.com/2076-3417/13/16/9395/pdf</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     pub_date                 title      venue  \\\n",
-       "0  2009-10-01  Paper Title Number 1  Journal 1   \n",
-       "1  2010-10-01  Paper Title Number 2  Journal 1   \n",
-       "2  2015-10-01  Paper Title Number 3  Journal 1   \n",
+       "     pub_date                                              title  \\\n",
+       "0  2025-09-30  Toward Quantum-Enabled Biomarker Discovery: An...   \n",
+       "1  2025-08-18  Noisy Quantum Simulation Using Tracking, Uncom...   \n",
+       "2  2024-09-20  Circuit decompositions and scheduling for neut...   \n",
+       "3  2024-02-20  YFlows: Systematic Dataflow Exploration and Co...   \n",
+       "4  2023-08-18  Applicability of Clay/Organic Clay to Environm...   \n",
+       "\n",
+       "                                               venue  \\\n",
+       "0                                   arXiv (quant-ph)   \n",
+       "1                                   arXiv (quant-ph)   \n",
+       "2  IEEE International Conference on Quantum Compu...   \n",
+       "3  Proceedings of the 33rd ACM SIGPLAN Internatio...   \n",
+       "4                                   Applied Sciences   \n",
        "\n",
        "                                             excerpt  \\\n",
-       "0  This paper is about the number 1. The number 2...   \n",
-       "1  This paper is about the number 2. The number 3...   \n",
-       "2  This paper is about the number 3. The number 4...   \n",
+       "0  Outlook on hybrid quantum–classical pipelines ...   \n",
+       "1  Introduces TUSQ, a simulator that reduces over...   \n",
+       "2  Compiler pipeline and scheduling that minimize...   \n",
+       "3  Explores dataflow choices and code generation ...   \n",
+       "4  Overview of clay and organoclay materials for ...   \n",
        "\n",
-       "                                            citation              url_slug  \\\n",
-       "0  Your Name, You. (2009). \"Paper Title Number 1....  paper-title-number-1   \n",
-       "1  Your Name, You. (2010). \"Paper Title Number 2....  paper-title-number-2   \n",
-       "2  Your Name, You. (2015). \"Paper Title Number 3....  paper-title-number-3   \n",
+       "                                            citation  \\\n",
+       "0  Shah, D., Teo, M., Robinett, R. A., Madejski, ...   \n",
+       "1  Dangwal, S., Oberoi, T., Sailopal, A., Shah, D...   \n",
+       "2  Nottingham, N., Perlin, M. A., Shah, D., White...   \n",
+       "3  Zhou, C., Hassman, Z., Shah, D., Richard, V., ...   \n",
+       "4  Qi, J., Yu, J., Shah, K. J., Shah, D. D., & Yo...   \n",
        "\n",
-       "                                         paper_url  \\\n",
-       "0  http://academicpages.github.io/files/paper1.pdf   \n",
-       "1  http://academicpages.github.io/files/paper2.pdf   \n",
-       "2  http://academicpages.github.io/files/paper3.pdf   \n",
+       "                                            url_slug  \\\n",
+       "0  q4bio-quantum-enabled-biomarker-discovery-outlook   \n",
+       "1  tusq-noisy-quantum-simulation-tracking-uncompu...   \n",
+       "2  neutral-atom-compiler-decompositions-schedulin...   \n",
+       "3          yflows-simd-dataflow-cpu-inference-cc2024   \n",
+       "4  applicability-of-clay-organic-clay-to-environm...   \n",
        "\n",
-       "                                         slides_url  \n",
-       "0  http://academicpages.github.io/files/slides1.pdf  \n",
-       "1  http://academicpages.github.io/files/slides2.pdf  \n",
-       "2  http://academicpages.github.io/files/slides3.pdf  "
+       "                                       paper_url  slides_url  \n",
+       "0               https://arxiv.org/pdf/2509.25904         NaN  \n",
+       "1           https://arxiv.org/pdf/2508.04880.pdf         NaN  \n",
+       "2           https://arxiv.org/pdf/2307.14996.pdf         NaN  \n",
+       "3           https://arxiv.org/pdf/2310.00574.pdf         NaN  \n",
+       "4  https://www.mdpi.com/2076-3417/13/16/9395/pdf         NaN  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -240,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -308,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -319,8 +360,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2009-10-01-paper-title-number-1.md  2015-10-01-paper-title-number-3.md\n",
-      "2010-10-01-paper-title-number-2.md  2024-02-17-paper-title-number-4.md\n"
+      "2023-08-18-applicability-of-clay-organic-clay-to-environmental-pollutants-green-way-an-overview.md\n",
+      "2024-02-20-yflows-simd-dataflow-cpu-inference-cc2024.md\n",
+      "2024-09-20-neutral-atom-compiler-decompositions-scheduling-qce2024.md\n",
+      "2025-08-18-tusq-noisy-quantum-simulation-tracking-uncomputation-sampling.md\n",
+      "2025-09-30-q4bio-quantum-enabled-biomarker-discovery-outlook.md\n"
      ]
     }
    ],
@@ -330,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -341,24 +385,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "---\n",
-      "title: \"Paper Title Number 1\"\n",
-      "collection: publications\n",
-      "permalink: /publication/2009-10-01-paper-title-number-1\n",
-      "excerpt: 'This paper is about the number 1. The number 2 is left for future work.'\n",
-      "date: 2009-10-01\n",
-      "venue: 'Journal 1'\n",
-      "slidesurl: 'http://academicpages.github.io/files/slides1.pdf'\n",
-      "paperurl: 'http://academicpages.github.io/files/paper1.pdf'\n",
-      "citation: 'Your Name, You. (2009). &quot;Paper Title Number 1.&quot; <i>Journal 1</i>. 1(1).'\n",
-      "---\n",
-      "This paper is about the number 1. The number 2 is left for future work.\n",
-      "\n",
-      "[Download slides here](http://academicpages.github.io/files/slides1.pdf)\n",
-      "\n",
-      "[Download paper here](http://academicpages.github.io/files/paper1.pdf)\n",
-      "\n",
-      "Recommended citation: Your Name, You. (2009). \"Paper Title Number 1.\" <i>Journal 1</i>. 1(1)."
+      "cat: ../_publications/2009-10-01-paper-title-number-1.md: No such file or directory\n"
      ]
     }
    ],
@@ -380,7 +407,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "condavenv",
    "language": "python",
    "name": "python3"
   },
@@ -394,7 +421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
